--- a/index.HTML
+++ b/index.HTML
@@ -7,7 +7,23 @@
     </head>
     <body>
         <div class="container">
-            
+            <nav>
+                <img src="images/logo.png" class="logo">
+                <ul>
+                    <li><a href="#">Market</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">White papers</a></li>
+                    <li><a href="#">About us</a></li>
+                </ul>
+                <a href="#" class="btn">EN</a>
+            </nav>
+
+            <div class="content">
+                <h1>GENERATE YOUR <br>NFT ART</h1>
+                <p>The best NFT ART generator you can create unique <br>piceses with just a few clicks.</p>
+           <a href="#" class="btn">EXPLORE MORE</a>
+            </div>
+            .
         </div>
     </body>
 </html>
